-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Fix Version/s: 0.4.15
-
Component/s: Services
-
Labels:
-
Module:
-
Guilty Commit:0.4.15-dev-2102-gfd39a29 https://git.reactos.org/?p=reactos.git;a=commit;h=fd39a292af70a5854f4e63f3a017f6ff3df5dacb
Since the commit of reactos-bootcd-0.4.15-dev-2102-gfd39a29-x86 it is no longer possible to use the "Ctrl-Alt-Del" then "Shutdown" then "OK" to shutdown ReactOS. This either gets locked into a circular debug pattern or results in a Blue Screen Event. This happens in both Virtual Box 4.3.12 and VMware Workstation 12.0.0. To reproduce this problem in VBox:
- Install ReactOS Boot CD, go through to the 3rd stage with all defaults
- Once on desktop, invoke Ctrl-Alt-Del sequence
- Use the Host Key to release the cursor from VBox (right-ctrl).
- From the VBox pull-down menu select "Machine" and then "Insert Ctrl-Alt-Del".
- (or just use Host Key + Del shortcut)
- From the dialog box select the "Shutdown" button.
- Now select either "OK" or "Cancel" and this will enter a debugger session.
A Debug log, screen shots, and a video file are attached.